<resources>
    <string name="app_name">pBg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="welcome_heading">Welcome to ProducerBG!</string>
    <string name="welcome_description">Here you will be able to view the details about hundreds of producers.</string>

    <string name="all_producers">See all producers</string>
    <string name="register">Register</string>
    <string name="login_form_title">Hello back!</string>
    <string name="register_form_title">Register with us</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm pass</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="login">Log In</string>

    <string name="description">Description:</string>
    <string name="type">Type:</string>
    <string name="main_products">Main products:</string>
    <string name="phone">Phone:</string>

    <string name="register_producer_title">Register new producer</string>
    <string name="name">Name</string>
    <string name="products">Products</string>
    <string name="address">Set address</string>
    <string name="logo">Upload logo</string>
    <string name="deleteProducer">Delete Producer</string>
    <string name="editBtnText">Submit Changes</string>

    <string-array name="types_array">
        <item>other</item>
        <item>agricultural</item>
        <item>food</item>
        <item>beverages</item>
        <item>furniture</item>
        <item>clothes</item>
        <item>machines</item>
        <item>cars</item>
        <item>bicycles</item>
        <item>toys</item>
    </string-array>
</resources>
