<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/register_producer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_title_register_producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/register_producer_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/ll_producer_type_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_producer_type_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"
                />

            <Spinner
                android:id="@+id/sp_producer_type_input"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_producer_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_producer_name_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ed_producer_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name"
                android:inputType="textWebEditText"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_description_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_description_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_description_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/description"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_products_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_products_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/products"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_products_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/products" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_producer_telephone_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_producer_telephone_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ed_producer_telephone_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/phone"
                android:inputType="phone"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_logo_adress_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_adress_producer"
                android:layout_width="120dp"
                android:layout_margin="1dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/lessImportantBtnStyle"/>

            <Button
                android:id="@+id/btn_logo_producer"
                android:layout_width="120dp"
                android:layout_margin="1dp"
                android:layout_height="wrap_content"
                android:text="@string/logo"
                style="@style/lessImportantBtnStyle"/>

        </LinearLayout>

        <fragment
            android:name="com.google.android.gms.maps.MapFragment"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            map:mapType="normal" />

        <Button
            android:id="@+id/btn_register_producer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
        <Button
            android:id="@+id/btn_edit_producer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editBtnText"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_delete_producer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteProducer"
            style="@style/deleteBtnStyle"
            android:layout_margin="5dp"/>
    </LinearLayout>

</ScrollView>