<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team15.producerbgclient.ProducerDetailsActivity">

    <ImageView
        android:id="@+id/iv_producer_details_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/no_logo_available"/>

    <TextView
        android:id="@+id/tv_producer_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_producer_details_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:alpha="0.8"
        android:background="#5c1b1b1b"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="Test"
        android:textColor="#fff"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_producer_details_name"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="@string/description"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_producer_details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_description_label"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="Test Test Test Test Test"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_producer_details_description"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="@string/type"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_producer_details_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_producer_details_description"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/tv_type_label"
        android:layout_toRightOf="@id/tv_type_label"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="Test Type Text"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_producer_details_main_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_producer_details_type"
        android:layout_marginTop="8dp"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="@string/main_products"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <LinearLayout
        android:id="@+id/ll_main_products_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_producer_details_main_products">

        <ListView
            android:id="@+id/lv_main_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_producer_details_main_products"></ListView>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/ll_main_products_wrapper"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="@string/email"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_producer_details_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_main_products_wrapper"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/tv_email_label"
        android:layout_toRightOf="@id/tv_email_label"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="Test Email"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/tv_producer_details_phone"
        android:layout_alignRight="@+id/tv_producer_details_type"
        android:layout_alignEnd="@+id/tv_producer_details_type"
        android:layout_alignBottom="@+id/tv_producer_details_phone"
        android:id="@+id/ib_phone" />

    <TextView
        android:id="@+id/tv_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_email_label"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="@string/phone"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_producer_details_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email_label"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/tv_phone_label"
        android:layout_toRightOf="@id/tv_phone_label"
        android:alpha="0.8"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:text="Test Phone number"
        android:textColor="#ff272727"
        android:textSize="15dp" />

    <ImageButton
        android:id="@+id/ib_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_mail"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/tv_producer_details_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/ib_phone" />

</RelativeLayout>
